--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,52 @@
     transform: rotate(360deg);
   }
 }
+
+.btn {
+  position: relative;
+  margin-top: 10rem;
+  height: 50px;
+  width: 200px;
+  background-color: rgb(221, 52, 52);
+}
+
+.container {
+  height: 100%;
+  width: 100%;
+  background-color: lightgray;
+}
+
+.dialogBoxTop {
+  position: absolute;
+  margin-top: -10%;
+  margin-left: 44%;
+  height: auto;
+  width: auto;
+  background-color: magenta;
+}
+
+.dialogBoxLeft {
+  position: absolute;
+  margin-top: -5%;
+  margin-left: 22%;
+  height: auto;
+  width: auto;
+  background-color: magenta;
+}
+
+.dialogBoxRight {
+  position: absolute;
+  margin-top: -5%;
+  margin-left: 65%;
+  height: auto;
+  width: auto;
+  background-color: magenta;
+}
+
+.dialogBoxBottom {
+  position: absolute;
+  margin-left: 44%;
+  height: auto;
+  width: auto;
+  background-color: magenta;
+}
