--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,14 @@
   background-color: rgb(221, 52, 52);
 }
 
+.btn:hover {
+  position: relative;
+  margin-top: 10rem;
+  height: 50px;
+  width: 200px;
+  background-color: rgb(139, 53, 53);
+}
+
 .container {
   height: 100%;
   width: 100%;
