--- a/src/App.css
+++ b/src/App.css
@@ -61,35 +61,36 @@
 
 .dialogBoxTop {
   position: absolute;
-  margin-top: -10%;
-  margin-left: 44%;
-  height: auto;
-  width: auto;
+  margin-top: -5.5rem;
+  margin-left: 41rem;
+  height: 2rem;
+  width: 8rem;
   background-color: magenta;
 }
 
 .dialogBoxLeft {
   position: absolute;
-  margin-top: -5%;
-  margin-left: 22%;
-  height: auto;
-  width: auto;
+  margin-top: -2.5rem;
+  margin-left: 30rem;
+  height: 2rem;
+  width: 8rem;
   background-color: magenta;
 }
 
 .dialogBoxRight {
   position: absolute;
-  margin-top: -5%;
-  margin-left: 65%;
-  height: auto;
-  width: auto;
+  margin-top: -2.5rem;
+  margin-left: 52rem;
+  height: 2rem;
+  width: 8rem;
   background-color: magenta;
 }
 
 .dialogBoxBottom {
   position: absolute;
-  margin-left: 44%;
-  height: auto;
-  width: auto;
+  margin-top: 0.5rem;
+  margin-left: 41rem;
+  height: 2rem;
+  width: 8rem;
   background-color: magenta;
 }
